deprecate ContainerUtil.newArrayList(Object) to prefer more immutable List.of()
GitOrigin-RevId: 7aadc5db58512750fbf47563df2d77f9be4c6e83